gccida/c2/print_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_reg/src/i386.c:6171:16: error: use of undeclared identifier 'off_67AF83'
fprintf( file, off_67AF83, ( unsigned int)( rtint - 29)); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/print_reg/src/obj/i386.o] Error 1
